# pytest-result-sender

./: .flake8  111.py  aa.py  msg.md  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yaml
src/pytest_result_sender1/: plugin.py
tests/: test_ini.py
