[project]
name = "pytest-result-sender"
version = "0.1.4"
description = "Default template for PDM package"
authors = [
    {name = "mygit", email = "2515458536@qq.com"},
]
dependencies = [
    "pytest>=8.4.2",
    "requests>=2.32.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"



[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
]


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | venv
  | buck-out
  | build
  | dist
)/
'''


[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
] }


test = "pytest"